[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scripts/Startingscreen.gd" type="Script" id=1]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://trashmen.png" type="Texture" id=3]



[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Settings" ]

[node name="Startingscreen" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="." index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -137.0
margin_top = -134.0
margin_right = 158.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START"
flat = false
clip_text = true
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="MessageLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 778.0
margin_top = -27.0
margin_right = 984.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "GAMEOVER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="MessageTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="CanvasLayer" type="CanvasLayer" parent="." index="3"]

layer = 0
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer" index="0"]

position = Vector2( 643.139, 250.324 )
scale = Vector2( 0.511589, 0.282445 )
texture = ExtResource( 3 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]


